# baseline-Latent-Diffusion

./: .gitignore  README.md  dit.yaml  download_kaggle_data.sh  losses.py  models.py  pyproject.toml  sample_dit.py  sample_vae.py  train_dit.py  train_vae.py  vae.yaml
src/: data.py  diffusion.py  losses.py
