[project]
name = "baseline-latent-diffusion"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "kaggle>=2.2.3",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
